--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ img {
 }
 .checkout_content .total_price {
   margin: 0 0 10px;
-  border-bottom: 1px solid var(--dark);
+  border-bottom: 1px dashed #ccc;
   padding: 20px 0;
   display: flex;
   align-items: center;
