--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,16 @@
   --dark: #122d40;
   --dark_light: #1c3e56;
 }
+
 ::-webkit-scrollbar {
   width: 10px;
   background: var(--dark);
 }
+
 ::-webkit-scrollbar-thumb {
   background: var(--main);
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -25,21 +28,59 @@
   font-family: "Montserrat", sans-serif;
   /* transition: 0.3s; */
 }
+
 body {
   background: #a5a5a5;
 }
+
+body.hidden {
+  overflow-y: hidden;
+}
+
 i.fi {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 img {
   width: 100%;
 }
+
+input {
+  padding: 10px;
+  width: 100%;
+  height: 50px;
+  background: inherit;
+  border: 3px solid var(--dark);
+  font-size: 18px;
+  font-weight: 600;
+}
+
+input:focus {
+  border-color: var(--main);
+}
+
+button {
+  background: var(--main);
+  border: none;
+  padding: 10px 15px;
+  text-transform: uppercase;
+  font-weight: 600;
+  cursor: pointer;
+  color: var(--dark);
+}
+
+button:hover {
+  background: var(--dark);
+  color: var(--main);
+}
+
 .container {
   margin: 50px auto;
   width: 1280px;
 }
+
 .row {
   width: 100%;
   display: flex;
@@ -47,8 +88,9 @@ img {
   align-items: flex-start;
   justify-content: space-between;
 }
+
 .overlay {
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(7, 10, 19, 0.5);
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -56,11 +98,23 @@ img {
   left: 0;
   opacity: 0;
   visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: saturate(180%) blur(12px);
 }
+
 .overlay.active {
   opacity: 1;
   visibility: visible;
 }
+
+.overlay.modal {
+  opacity: 1;
+  visibility: visible;
+  z-index: 9999;
+}
+
 .product_bar {
   margin: 0 0 20px;
   background: #fff;
@@ -72,15 +126,18 @@ img {
   box-shadow: 0 0 10px #a5a5a5;
   z-index: 9999;
 }
+
 .product_bar .row {
   align-items: center;
 }
+
 .product_bar .title {
   color: var(--main);
   font-size: 26px;
   text-transform: uppercase;
   font-weight: 600;
 }
+
 .product_bar .add {
   padding: 10px 15px;
   display: flex;
@@ -93,6 +150,7 @@ img {
   color: #fff;
   cursor: pointer;
 }
+
 .product_bar .cart {
   padding: 10px 15px;
   display: flex;
@@ -105,6 +163,7 @@ img {
   color: #fff;
   cursor: pointer;
 }
+
 .cart_content {
   background: #fff;
   border-top: 1px dashed #ccc;
@@ -116,18 +175,22 @@ img {
   opacity: 0;
   visibility: hidden;
 }
+
 .cart_content.active {
   margin: 20px 0 0;
   height: 450px;
   opacity: 1;
   visibility: visible;
 }
+
 .cart_content .total {
   width: 100%;
 }
+
 .checkout_content {
   width: 100%;
 }
+
 .checkout_content .total_price {
   margin: 0 0 10px;
   border-bottom: 1px dashed #ccc;
@@ -139,9 +202,11 @@ img {
   font-size: 20px;
   text-transform: uppercase;
 }
+
 .checkout_content .total_price span:first-child {
   color: var(--dark);
 }
+
 ul.checkout {
   padding: 20px 15px 20px 0;
   width: 100%;
@@ -150,6 +215,7 @@ ul.checkout {
   display: flex;
   flex-direction: column;
 }
+
 ul.checkout li {
   padding: 15px 0;
   display: flex;
@@ -157,32 +223,39 @@ ul.checkout li {
   align-items: center;
   border-bottom: 1px dashed #ccc;
 }
+
 ul.checkout li:first-child {
   padding-top: 0;
 }
+
 ul.checkout li:last-child {
   padding-bottom: 0;
   border: none;
 }
+
 ul.checkout li img {
   width: 100px;
 }
+
 ul.checkout li .data {
   display: flex;
   gap: 5px;
   flex-direction: column;
   justify-content: center;
 }
+
 ul.checkout li .data .name {
   font-size: 16px;
   font-weight: 600;
   color: var(--dark);
 }
+
 ul.checkout li .data .price {
   font-size: 16px;
   font-weight: 500;
   color: var(--dark);
 }
+
 ul.checkout li .remove {
   margin-left: auto;
   width: 40px;
@@ -200,6 +273,7 @@ ul.checkout li .remove {
 .products .row {
   flex-wrap: wrap;
 }
+
 .products .item {
   width: 305px;
   padding: 20px;
@@ -208,15 +282,18 @@ ul.checkout li .remove {
   flex-direction: column;
   gap: 10px;
 }
+
 .products .item .name {
   font-weight: 600;
   color: var(--dark);
 }
+
 .products .item .price {
   text-align: center;
   font-weight: 600;
   color: var(--dark);
 }
+
 .products .item button {
   background: var(--main);
   border: none;
@@ -226,7 +303,32 @@ ul.checkout li .remove {
   cursor: pointer;
   color: var(--dark);
 }
+
 .products .item button:hover {
   background: var(--dark);
   color: var(--main);
+}
+
+/* Modal */
+.modal_content {
+  padding: 30px;
+  max-width: 600px;
+  width: 500px;
+  min-width: 500px;
+  background: #fff;
+}
+
+.modal_content .add_product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+/* Music */
+
+.bg_audio {
+  visibility: hidden;
+  display: none;
 }
